finished out the tut. still need to implement some of the extra stuff

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,1 +1,7 @@
-<h1>RailsBridge Corp Open Jobs</h1>
+<h1>RailsBridge Jobs Board</h1>
+
+<ol>
+  <% @jobs.each do |job| %>
+    <li><%= link_to job.title, job_path(job) %></>
+  <% end %>
+</ol>
