--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>JobBoard</title>
+  <title>JobsBoard</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-<%= yield %>
+  <header class="clearfix">
+    <div class="left-nav">
+      <ul>
+        <li><%= link_to "Home", jobs_path %></li>
+      </ul>
+    </div>
+    <div class="right-nav">
+      <ul>
+        <li><%= link_to "Add Job", new_job_path %></li>
+      </ul>
+    </div>
+  </header>
+
+  <div class="content">
+    <%= yield %>
+  </div>
 
 </body>
 </html>
